deploy: 50a1502256c533fdad62aa05efbd899bff04badb

--- a/index.html
+++ b/index.html
@@ -445,36 +445,117 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_skillスキル">Skill(スキル)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>以下2022/12/11時点ものである。</p>
+<p>以下2022/12/16時点ものである。</p>
 </div>
-<div class="paragraph">
-<p>|大枠|具体的技術|レベル感・経験|
-|-----------------|-------------------|--------|
-|チーム開発|アジャイル開発&lt;br&gt;Git/Github&lt;br&gt;&lt;br&gt;|業務で1年以上経験あり&lt;br&gt;日常的に使用&lt;br&gt;- ブランチ戦略の理解
-|要件定義|ICONIX|個人開発で経験あり|
-|プログラミング言語|Java&lt;br&gt;&lt;br&gt;Dart&lt;br&gt;TypeScript|業務で2年以上経験あり&lt;br&gt;- Nativeイメージへの理解&lt;br&gt;業務で半年以上経験あり&lt;br&gt;個人開発で使用|
-|Webフレームワーク|Spring|業務で2年以上経験あり|
-|ビルドツール|Gradle|業務で1年以上経験あり|
-|Webアプリケーション開発|GraphQL&lt;br&gt;ネットワーク&lt;br&gt;|業務で半年以上経験あり&lt;br&gt;httpやSSLへの理解|
-|モバイル開発|Flutter&lt;br&gt;Firebase&lt;br&gt;&lt;br&gt;アプリリリース&lt;br&gt;&lt;br&gt;|業務で半年以上経験あり&lt;br&gt;業務で半年以上経験あり&lt;br&gt;- セキュリティルールの記述&lt;br&gt;iOS/Androidリリース経験&lt;br&gt;- Flavorによる環境構築
-|ソフトウェアアーキテクチャ設計|DDD, クリーンアーキテクチャ, オニオンアーキテクチャ,etc&#8230;&#8203;|業務で半年以上経験あり&lt;br&gt;- 違いや利点を述べることができる|
-|クラウド技術|Kubernates&lt;br&gt;&lt;br&gt;Kustomize&lt;br&gt;&lt;br&gt;|業務で1年以上使用&lt;br&gt;- CRDへの理解&lt;br&gt;業務で1年以上使用&lt;br&gt;- 環境差分構築可能|
-|監視|Prometheus&lt;br&gt;Grafana|業務で1年以上使用&lt;br&gt;業務で1年以上使用&lt;br&gt;|
-|CI|CI|業務で日常的に使用
-|CD|Flux|業務で半年以上経験あり&lt;br&gt;</p>
-</div>
+<table class="tableblock frame-all grid-all stretch">
+<caption class="title">Table 1. スキル一覧</caption>
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">大枠</th>
+<th class="tableblock halign-left valign-top">具体的技術</th>
+<th class="tableblock halign-left valign-top">レベル感・経験</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top" rowspan="2"><p class="tableblock">チーム開発</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">アジャイル開発</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で1年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Git/Github</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">日常的に使用, ブランチ戦略の理解</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">要件定義</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ICONIX</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">個人開発で何度か経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" rowspan="2"><p class="tableblock">プログラミング言語</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Java</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で2年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Dart</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Webフレームワーク</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Spring</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で2年以上経験あり, Spring Native使用経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ビルドツール</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Gradle</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で1年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Webアプリケーション開発</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">GraphQL</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" rowspan="3"><p class="tableblock">モバイル開発</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Flutter</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Firebase</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり, セキュリティルールの記述</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">アプリリリース</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">iOS/Androidリリース経験, Flavorによる環境構築</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ソフトウェアアーキテクチャ設計</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">DDD, クリーンアーキテクチャ, オニオンアーキテクチャ,etc&#8230;&#8203;</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり, 違いや利点を述べることができる, 理解してコーディングできる</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top" rowspan="4"><p class="tableblock">クラウド技術</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Kubernates</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上使用(インフラ運用込み), CRDへの理解</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Kustomize</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上使用, 環境差分構築可能</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Prometheus, Grafana</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上使用</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Flux</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">CI/CD</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Screwdriver</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">半年以上経験あり, 業務で日常的に使用</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_history経歴">History(経歴)</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p>鋭意作成中</p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-12-15 14:49:48 UTC
+Last updated 2022-12-15 15:37:32 UTC
 </div>
 </div>
 </body>
