deploy: e56acb8eee4cef152997f79ee1c95eb29abbadb3

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_skillスキル">Skill(スキル)</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>以下2022/12/16時点ものである。</p>
+<p>以下2022/12/16時点のものである。</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 1. スキル一覧</caption>
@@ -555,7 +555,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-12-15 15:37:32 UTC
+Last updated 2022-12-15 15:40:50 UTC
 </div>
 </div>
 </body>
