--- a/index.html
+++ b/index.html
@@ -519,12 +519,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上経験あり, 違いや利点を述べることができる, 理解してコーディングできる</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top" rowspan="4"><p class="tableblock">クラウド技術</p></td>
+<td class="tableblock halign-left valign-top" rowspan="5"><p class="tableblock">クラウド技術</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kubernates</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上使用(インフラ運用込み), CRDへの理解</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kustomize</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上使用, 環境差分構築可能</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Helm</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">業務で半年以上使用, 環境差分構築可能</p></td>
 </tr>
 <tr>
@@ -555,7 +559,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-12-15 15:40:50 UTC
+Last updated 2022-12-24 11:09:36 UTC
 </div>
 </div>
 </body>
